src/components/ShiftTypeEditor/index.css
.shift-type-editor__container {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  align-items: center;
  justify-content: center;
  z-index: 2;
}

.shift-type-editor__config-container {
  width: 372px;
  z-index: 2;
  background-color: #ffffff;
  border-radius: 2px;
}

.shift-type-editor__name {
  width: 100%;
  height: 4rem;
  margin-bottom: 1rem;
  padding-left: 0.5rem;
  font-size: 1.25rem;
  border-bottom: 1px solid #d5d5d6;
  border-radius: 0;
  background-color: #eeeeee;
  border-top: none;
  border-left: none;
  border-right: none;
}

.shift-type-editor__name:focus {
  background-color: #fafafa;
  outline: none;
}

.shift-type-editor__save {
  height: 3.5rem;
  width: 100%;
  display: flex;
  justify-content: center;
  align-content: center;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0;
  border: none;
  color: #ffffff;
  font-size: 1.25rem;
  font-weight: 300;
  text-transform: uppercase;
  letter-spacing: 0.25rem;
  user-select: none;
  outline: none;
  background-color: #ff5722;
  margin-top: 1rem;
}

.shift-type-editor__overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.7);
}

/* Reset the box shadow of the library class */
.swatches-picker div {
  box-shadow: none !important;
}

